# opencal

./: Cargo.toml  README.md  calendar.rs
.github/workflows/: general.yml
docs/: SETUP.md
frontend/: Cargo.toml  index.html  notes.md
frontend/Prototype/: bar.css  index.html  script.js  style.css
frontend/css/: calendar.css  navbar.css  sidebar.css  web.css
frontend/js/: web.js
frontend/src/: main.rs
src/: calendar.rs  event.rs  lib.rs  lib2.rs  main.rs  server.rs  session.rs
src/async/: error_handle.rs  error_page  server,rs
src/calendar/: calendar.rs
src/lib/: cal.rs  event.rs  lib.rs
tests/: health_check.rs  health_test2  ws_endroute_works.rs
