[package]
name = "opencal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "opencal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["std", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
actix-rt = "2.8.0"
actix = "0.13.0"
actix-web-actors = "4.2.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.26"
slotmap = "1.0.6"
anyhow = "1.0.70"
uuid = {version = "1.3.1", features = ["v4", "fast-rng"]}
tracing = {version = "0.1", features = ["log"]}
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]}
tracing-log = "0.1.3"

[dev-dependencies]
reqwest = "0.11.14"
tokio = "1.25.0"
tokio-tungstenite = "0.18.0"
